# cargo-n64

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  rust-toolchain
.github/workflows/: ci.yml
cargo-n64/: Cargo.toml  rust-toolchain
cargo-n64/src/: cargo.rs  cli.rs  elf.rs  fs.rs  header.rs  ipl3.rs  lib.rs
cargo-n64/src/templates/: help.fmt  linker.ld  mips-nintendo64-none.fmt
examples/: README.md
examples/hello-ipl3font/: Cargo.toml
examples/hello-ipl3font/src/: main.rs
examples/n64lib/: Cargo.toml
examples/n64lib/src/: allocator.rs  ipl3font.rs  isviewer.rs  lib.rs  lock.rs  prelude.rs  util.rs  vi.rs
src/: cargo.rs  cic.rs  cli.rs  elf.rs  fs.rs  header.rs  ipl3.rs  lib.rs
src/templates/: help.fmt  mips-nintendo64-none.fmt
