[package]
name = "cargo-n64"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
repository = "https://github.com/rust-console/cargo-n64"
description = "Cargo subcommand to build Nintendo 64 ROMs"
license = "MIT"
categories = ["command-line-utilities", "development-tools", "embedded"]
keywords = ["cli", "cross", "compilation", "nintendo", "n64"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
byteorder = "1.2"
colored = "1.6"
crc32fast = "1.1"
failure = "0.1"
failure_derive = "0.1"
fatfs = { git = "https://github.com/rafalh/rust-fatfs.git", rev = "131f047c91825434921c4c79ee88be0c5881ad02" }
goblin = "0.0.19"
itertools = "0.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
