[package]
name = "cargo-n64"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
repository = "https://github.com/rust-console/cargo-n64"
description = "Cargo subcommand to build Nintendo 64 ROMs"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities", "development-tools", "embedded"]
keywords = ["cli", "cross", "compilation", "nintendo", "n64"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
byteorder = "1.3"
colored = "1.7"
crc32fast = "1.2"
failure = "0.1"
failure_derive = "0.1"
fatfs = "0.3"
goblin = "0.0.21"
itertools = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
