[workspace]
members = [
    "examples/n64lib",
    "examples/hello-ipl3font",
]

[profile.release]
lto = "thin"

[package]
name = "cargo-n64"
version = "0.2.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
repository = "https://github.com/rust-console/cargo-n64"
description = "Cargo subcommand to build Nintendo 64 ROMs"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities", "development-tools", "embedded"]
keywords = ["cli", "cross", "compilation", "nintendo", "n64"]
edition = "2021"

[dependencies]
colored = "2.0"
crc32fast = "1.2"
error-iter = "0.2"
fatfs = "0.3"
goblin = { version = "0.5", default-features = false, features = ["std", "elf32", "elf64", "endian_fd"] }
gumdrop = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[patch.crates-io]
rrt0 = { git = "https://github.com/rust-console/rrt0.git", rev = "4140c6686b9e358a972cfde557fe4ee85898831e" }
