[package]
name = "cargo-n64"
version = "0.1.2"
authors = ["Jay Oster <jay@kodewerx.org>"]
repository = "https://github.com/rust-console/cargo-n64"
description = "Cargo subcommand to build Nintendo 64 ROMs"
license = "MIT"
readme = "../README.md"
categories = ["command-line-utilities", "development-tools", "embedded"]
keywords = ["cli", "cross", "compilation", "nintendo", "n64"]
edition = "2018"

[dependencies]
byteorder = "1.3"
cargo-xbuild = "0.5"
colored = "1.7"
crc32fast = "1.2"
failure = "0.1"
failure_derive = "0.1"
fatfs = "0.3"
goblin = { version = "0.2", default-features = false, features = ["std", "elf32", "elf64", "endian_fd"] }
itertools = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[badges]
travis-ci = { repository = "rust-console/cargo-n64", branch = "master" }
maintenance = { status = "passively-maintained" }
